--- a/first_page_d.css
+++ b/first_page_d.css
@@ -33,7 +33,7 @@ display:block;
 .bottom_bar {
   height: 40px;
   width: 100%;
-  background-color: rgb(164, 164, 164);
+  background-color: rgb(236, 232, 198);
   position: absolute;
   display: flex;
   align-items: center;
@@ -41,7 +41,8 @@ display:block;
   position: fixed;
   bottom: 0;
   box-shadow: 5px 5px 10px 5px rgb(29, 29, 29);
-
+  outline: 5px solid;
+  outline-color:rgb(39, 137, 57);
   
 }
 .bottom_start_button{
@@ -79,7 +80,7 @@ display:block;
   top: 30%;
   left: 10%;
 
-  
+
   
 }
 
@@ -97,10 +98,20 @@ display:block;
   top: 20%;
   left: 30%;
 
-  z-index: 10000;
+  z-index: 100000000;
 
 }
+.questionClickme{
+  width: 500px;
+  height: 700px;
+  position: absolute;
+  background-color: white !important;
+  top: 20%;
+  left: 30%;
+  display:none;
 
+
+}
 
 .faq_window{
   width: 500px;
@@ -139,10 +150,11 @@ display:block;
   height: 100%;
   position: absolute;
   box-shadow: 5px 5px 10px rgb(29, 29, 29);
-  outline: 5px solid;
+  outline: 8px solid;
   place-items: center;
   border-radius: 0.3rem;
   overflow: hidden;
+  
 
 }
 
