--- a/sponsors_d.css
+++ b/sponsors_d.css
@@ -17,7 +17,7 @@
   }
   
 
-/* .sponsor_images img { 
+.sponsor_images img { 
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
@@ -28,7 +28,7 @@
     0% { transform: translate(0,  0px); } 
     50%  { transform: translate(0, 15px); } 
     100%   { transform: translate(0, -0px); }
-} */
+}
 
 .sponsor_images{
 
