--- a/tracks_d.css
+++ b/tracks_d.css
@@ -60,7 +60,7 @@
 }
 
 .front {
-  background-color: rgb(46, 71, 214);
+  background-color: rgb(46, 66, 214);
   /* background-color: FFCD4B; */
   outline: 5px solid;
 
